implemented showing users by changing demo code. (demo code is commented out, not deleted)

--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -62,13 +62,23 @@
     <div id="resetResultMsg"></div>
 
     <br><hr><br> <!-- ========================================================================= -->
-
+<!-- 
     <h2> Insert Values into DemoTable </h2>
     <form id="insertDemotable">
         ID: <input type="number" id="insertId" placeholder="Enter ID" required> <br><br>
         Name: <input type="text" id="insertName" placeholder="Enter Name" maxlength="20"> <br><br>
 
         <button type="submit"> insert </button> <br>
+    </form>
+    <div id="insertResultMsg"></div> -->
+
+    <h2> Insert into AppUser </h2>
+    <form id="insertAppUser">
+        ID: <input type="number" id="insertId" placeholder="Enter ID" required> <br><br>
+        First Name: <input type="text" id="insertFirstName" placeholder="Enter First Name" maxlength="20"> <br><br>
+        Last Name: <input type="text" id="insertLastName" placeholder="Enter Last Name" maxlength="20"> <br><br>
+
+        <button type="submit"> Insert </button> <br>
     </form>
     <div id="insertResultMsg"></div>
 
