for populating table (optional?)

--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -61,6 +61,11 @@
     <!-- A placeholder to display messages related to the reset operation. -->
     <div id="resetResultMsg"></div>
 
+    <h2>Populate Users</h2>
+    <button id="populateAppUsers"> Populate </button> <br>
+    <div id="populateResultMsg"></div>
+
+
     <br><hr><br> <!-- ========================================================================= -->
 <!-- 
     <h2> Insert Values into DemoTable </h2>
