--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -55,7 +55,7 @@
 
     <br><hr><br> <!-- ========================================================================= -->
 
-    <h2>Reset Demotable</h2>
+    <h2>Reset User Table</h2>
     <p>If you wish to reset the table press on the reset button. If this is the first time you're running this page, you MUST use reset</p>
     <button id="resetAppUsers"> reset </button> <br>
     <!-- A placeholder to display messages related to the reset operation. -->
@@ -102,7 +102,7 @@
 
     <br><hr><br> <!-- ========================================================================= -->
 
-    <h2>Count the Tuples in DemoTable</h2>
+    <h2>Count the Tuples in User Table</h2>
     <!-- <button id="countDemotable"> count </button> <br><br> -->
     <button id="countAppUsers"> count </button> <br><br>
     <!-- A placeholder to display the count result. -->
