updated count html

--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -77,7 +77,7 @@
     </form>
     <div id="insertResultMsg"></div> -->
 
-    <h2> Insert into AppUser </h2>
+    <h2> Insert New User </h2>
     <form id="insertAppUser">
         ID: <input type="number" id="insertId" placeholder="Enter ID" required> <br><br>
         First Name: <input type="text" id="insertFirstName" placeholder="Enter First Name" maxlength="20"> <br><br>
@@ -102,7 +102,7 @@
 
     <br><hr><br> <!-- ========================================================================= -->
 
-    <h2>Count the Tuples in User Table</h2>
+    <h2>Count Number of Users</h2>
     <!-- <button id="countDemotable"> count </button> <br><br> -->
     <button id="countAppUsers"> count </button> <br><br>
     <!-- A placeholder to display the count result. -->
