--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -53,6 +53,23 @@
         </tbody>
     </table>
 
+    <h2>Show Tasks</h2>
+    <table id="tasksTable" border="1">
+        <thead>
+            <tr>
+                <th>taskID</th>
+                <th>frequency</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+
+    <h2>Populate Tasks</h2>
+    <button id="populateTasks"> Populate </button> <br>
+    <div id="populateResultMsg"></div>
+
+
     <br><hr><br> <!-- ========================================================================= -->
 
     <h2>Reset User Table</h2>
