reset tasks table

--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -73,6 +73,11 @@
     <!-- A placeholder to display messages related to the reset operation. -->
     <div id="resetResultMsg"></div>
 
+    <h2>Reset Task Table</h2>
+    <button id="resetTasks"> reset </button> <br>
+    <!-- A placeholder to display messages related to the reset operation. -->
+    <div id="resetResultMsg"></div>
+
     <h2>Populate Users</h2>
     <button id="populateAppUsers"> Populate </button> <br>
     <div id="populateResultMsg"></div>
