--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -47,14 +47,32 @@
                 <th>UserID</th>
                 <th>First Name</th>
                 <th>Last Name</th>
+                <th>Tasks</th>
             </tr>
         </thead>
         <tbody>
         </tbody>
     </table>
 
-    <h2>Show Tasks</h2>
+    <!-- <h2>Show Tasks</h2>
     <table id="tasksTable" border="1">
+        <thead>
+            <tr>
+                <th>taskID</th>
+                <th>frequency</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table> -->
+
+    <h2> Show User's Task(s) </h2>
+    <form id="showUserTasksForm">
+        ID: <input type="number" id="userIDInput" placeholder="Enter UserID" required> <br><br>
+        <button type="submit"> Search </button> <br>
+    </form>
+    <div id="userTasksResultMsg"></div>
+    <table id="tasksTable" border="1" style="display: none;">
         <thead>
             <tr>
                 <th>taskID</th>
@@ -108,8 +126,18 @@
     </form>
     <div id="insertResultMsg"></div>
 
-    <h2> Insert New Task </h2>
+    <!-- <h2> Insert New Task </h2>
     <form id="insertTask">
+        TaskID: <input type="number" id="insertTaskId" placeholder="Enter ID" required> <br><br>
+        Frequency: <input type="text" id="insertFrequency" placeholder="Enter Frequency" maxlength="20"> <br><br>
+
+        <button type="submit"> Insert Task</button> <br>
+    </form>
+    <div id="insertResultMsg"></div> -->
+
+    <h2> Insert New Task </h2>
+    <form id="insertUserTask">
+        userID: <input type="number" id="insertUserId" placeholder="Enter ID" required> <br><br>
         TaskID: <input type="number" id="insertTaskId" placeholder="Enter ID" required> <br><br>
         Frequency: <input type="text" id="insertFrequency" placeholder="Enter Frequency" maxlength="20"> <br><br>
 
