--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -47,11 +47,33 @@
                 <th>UserID</th>
                 <th>First Name</th>
                 <th>Last Name</th>
-                <th>Tasks</th>
+                <th>Task</th>
             </tr>
         </thead>
         <tbody>
         </tbody>
+    </table>
+
+    <h2>Find User</h2>
+    <form id="searchUserForm">
+        <label for="searchUserId">User ID:</label>
+        <input type="text" id="searchUserId" name="userID">
+        <label for="searchFirstName">First Name:</label>
+        <input type="text" id="searchFirstName" name="firstName">
+        <label for="searchLastName">Last Name:</label>
+        <input type="text" id="searchLastName" name="lastName">
+        <button type="submit">Search</button>
+    </form>
+    <p id="searchResultMsg"></p>
+    <table id="searchResultsTable" border="1">
+        <thead>
+            <tr>
+                <th>UserID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
     </table>
 
     <!-- <h2>Show Tasks</h2>
@@ -146,6 +168,14 @@
     <div id="insertResultMsg"></div>
 
     <br><hr><br> <!-- ========================================================================= -->
+    <h2> Delete User </h2>
+    <form id="deleteUser">
+        userID: <input type="number" id="deleteUserId" placeholder="Enter ID" required> <br><br>
+        <button type="submit"> Delete </button> <br>
+    </form>
+    <div id="insertResultMsg"></div>
+    <br><hr><br> <!-- ========================================================================= -->
+
 
     <h2>Update Name in DemoTable</h2>
     <p>The values are case sensitive and if you enter in the wrong case, the update statement will not do anything.</p>
