updated searchUserID type to number

--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -57,7 +57,7 @@
     <h2>Find User</h2>
     <form id="searchUserForm">
         <label for="searchUserId">User ID:</label>
-        <input type="text" id="searchUserId" name="userID">
+        <input type="number" id="searchUserId" name="userID">
         <label for="searchFirstName">First Name:</label>
         <input type="text" id="searchFirstName" name="firstName">
         <label for="searchLastName">Last Name:</label>
