--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -99,6 +99,7 @@
             <tr>
                 <th>taskID</th>
                 <th>frequency</th>
+                <th>details</th> 
             </tr>
         </thead>
         <tbody>
@@ -162,6 +163,7 @@
         userID: <input type="number" id="insertUserId" placeholder="Enter ID" required> <br><br>
         TaskID: <input type="number" id="insertTaskId" placeholder="Enter ID" required> <br><br>
         Frequency: <input type="text" id="insertFrequency" placeholder="Enter Frequency" maxlength="20"> <br><br>
+        Details: <input type="text" id="insertDetails" placeholder="Enter Details" maxlength="20"> <br><br>
 
         <button type="submit"> Insert Task</button> <br>
     </form>
