--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -47,7 +47,7 @@
                 <th>UserID</th>
                 <th>First Name</th>
                 <th>Last Name</th>
-                <th>Task</th>
+                <th>Role</th>
             </tr>
         </thead>
         <tbody>
@@ -115,7 +115,6 @@
     <button id="populateTasks"> Populate </button> <br>
     <div id="populateResultMsg"></div>
 
-
     <br><hr><br> <!-- ========================================================================= -->
 <!-- 
     <h2> Insert Values into DemoTable </h2>
@@ -132,7 +131,11 @@
         ID: <input type="number" id="insertId" placeholder="Enter ID" required> <br><br>
         First Name: <input type="text" id="insertFirstName" placeholder="Enter First Name" maxlength="20"> <br><br>
         Last Name: <input type="text" id="insertLastName" placeholder="Enter Last Name" maxlength="20"> <br><br>
-
+        <label for="role">Choose a role:</label>
+        <select name="role" id="role">
+            <option value="owner">Owner</option>
+            <option value="gardener">Gardener</option>
+        </select>
         <button type="submit"> Insert </button> <br>
     </form>
     <div id="insertResultMsg"></div>
@@ -141,7 +144,16 @@
     <form id="insertUserTask">
         userID: <input type="number" id="insertUserId" placeholder="Enter ID" required> <br><br>
         TaskID: <input type="number" id="insertTaskId" placeholder="Enter ID" required> <br><br>
-        Frequency: <input type="text" id="insertFrequency" placeholder="Enter Frequency" maxlength="20"> <br><br>
+        <!-- Frequency: <input type="text" id="insertFrequency" placeholder="Enter Frequency" maxlength="20"> <br><br> -->
+        <label for="frequency">Insert Frequency:</label>
+        <select name="frequency" id="insertFrequency">
+            <option value="daily">Daily</option>
+            <option value="weekly">Weekly</option>
+            <option value="biweekly">Biweekly</option>
+            <option value="monthly">Monthly</option>
+            <option value="biannually">Biannually</option>
+            <option value="annually">Annually</option>
+        </select> <br><br>
         Details: <input type="text" id="insertDetails" placeholder="Enter Details" maxlength="20"> <br><br>
 
         <button type="submit"> Insert Task</button> <br>
