--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <!-- This meta tag ensures that the website renders correctly across different device sizes, enhancing mobile responsiveness. -->
@@ -10,19 +11,21 @@
 
     <title>Database Application</title>
 </head>
+
 <body>
     <!-- ===================================================================================== -->
     <!-- Display the current status of the database connection. 
          !!HERE TO HELP U DEBUGGING, NOT REQUIRED IN YOUR OWN PROJECT!!
          -->
-    <h1>Database Connection Status: 
+    <h1>Database Connection Status:
         <!-- An in-line placeholder to display connection status. -->
         <span id="dbStatus"> </span>
         <!-- A loading GIF, will be hided once get the status. -->
         <img id="loadingGif" class="loading-gif" src="loading_100px.gif" alt="Loading...">
     </h1>
 
-    <br><hr><br> <!-- ========================================================================= -->
+    <br>
+    <hr><br> <!-- ========================================================================= -->
 
     <!-- Show 'Demotable'. 
         Data will be fetched and inserted here dynamically using JavaScript. -->
@@ -30,8 +33,8 @@
     <table id="demotable" border="1">
         <thead>
             <tr> -->
-                <!--Table head, need to be adjusted accordingly to align with your own.-->
-                <!-- <th>ID</th>
+    <!--Table head, need to be adjusted accordingly to align with your own.-->
+    <!-- <th>ID</th>
                 <th>Name</th>
             </tr>
         </thead>
@@ -85,17 +88,31 @@
             <tr>
                 <th>taskID</th>
                 <th>frequency</th>
-                <th>details</th> 
+                <th>details</th>
             </tr>
         </thead>
         <tbody>
         </tbody>
     </table>
 
-    <br><hr><br> <!-- ========================================================================= -->
+    <h2>Show Plants</h2>
+    <table id="plantTable" border="1">
+        <thead>
+            <tr>
+                <th>PlantID</th>
+                <th>Species</th>
+                <th>Plant Name</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <br>
+    <hr><br> <!-- ========================================================================= -->
 
     <h2>Reset User Table</h2>
-    <p>If you wish to reset the table press on the reset button. If this is the first time you're running this page, you MUST use reset</p>
+    <p>If you wish to reset the table press on the reset button. If this is the first time you're running this page, you
+        MUST use reset</p>
     <button id="resetAppUsers"> reset </button> <br>
     <!-- A placeholder to display messages related to the reset operation. -->
     <div id="resetResultMsg"></div>
@@ -113,8 +130,9 @@
     <button id="populateTasks"> Populate </button> <br>
     <div id="populateResultMsg"></div>
 
-    <br><hr><br> <!-- ========================================================================= -->
-<!-- 
+    <br>
+    <hr><br> <!-- ========================================================================= -->
+    <!-- 
     <h2> Insert Values into DemoTable </h2>
     <form id="insertDemotable">
         ID: <input type="number" id="insertId" placeholder="Enter ID" required> <br><br>
@@ -158,14 +176,25 @@
     </form>
     <div id="insertResultMsg"></div>
 
-    <br><hr><br> <!-- ========================================================================= -->
+    <h2>Insert New Plant</h2>
+    <form id="insertPlantForm">
+        Plant ID: <input type="number" id="plantID" required><br><br>
+        Species: <input type="text" id="species" required><br><br>
+        Plant Name: <input type="text" id="plantName" required><br><br>
+        <button type="submit">Insert</button>
+    </form>
+    <div id="insertPlantMsg"></div>
+
+    <br>
+    <hr><br> <!-- ========================================================================= -->
     <h2> Delete User </h2>
     <form id="deleteUser">
         userID: <input type="number" id="deleteUserId" placeholder="Enter ID" required> <br><br>
         <button type="submit"> Delete </button> <br>
     </form>
     <div id="insertResultMsg"></div>
-    <br><hr><br> <!-- ========================================================================= -->
+    <br>
+    <hr><br> <!-- ========================================================================= -->
 
 
     <h2>Update Name in DemoTable</h2>
@@ -179,7 +208,8 @@
     <!-- A placeholder to display messages related to the update operation. -->
     <div id="updateNameResultMsg"></div>
 
-    <br><hr><br> <!-- ========================================================================= -->
+    <br>
+    <hr><br> <!-- ========================================================================= -->
 
     <h2>Count Number of Users</h2>
     <!-- <button id="countDemotable"> count </button> <br><br> -->
@@ -191,4 +221,5 @@
     <!-- External JavaScript file that contains the functionality/logic for the operations above. -->
     <script src="scripts.js"></script>
 </body>
+
 </html>
