plantlog display and fetch

--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -55,6 +55,24 @@
         <tbody></tbody>
     </table>
 
+     <!--Plantlog Display-->
+
+    <h2>Plant Log</h2>
+    <button id="resetPlantLogBtn">Reset Plant Log Table</button>
+    <p id="plantLogResetMsg"></p>
+
+    <table id="plantLogTable" border="1">
+    <thead>
+        <tr>
+        <th>PlantLogID</th><th>PlantID</th><th>Species</th><th>SoilID</th><th>Date Planted</th><th>Growth</th><th>Harvest Date</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+    </table>
+
+    <!--End of Plantlog display-->
+
+
     <h2>Find User</h2>
     <form id="searchUserForm">
         <label for="searchUserId">User ID:</label>
