--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -131,12 +131,12 @@
     <h2>Reset User Table</h2>
     <p>If you wish to reset the table press on the reset button. If this is the first time you're running this page, you
         MUST use reset</p>
-    <button id="resetAppUsers"> reset </button> <br>
+    <button id="resetAppUsers"> Reset </button> <br>
     <!-- A placeholder to display messages related to the reset operation. -->
     <div id="resetResultMsg"></div>
 
     <h2>Reset Task Table</h2>
-    <button id="resetTasks"> reset </button> <br>
+    <button id="resetTasks"> Reset </button> <br>
     <!-- A placeholder to display messages related to the reset operation. -->
     <div id="resetResultMsg"></div>
 
@@ -183,7 +183,7 @@
             <option value="monthly">Monthly</option>
             <option value="biannually">Biannually</option>
             <option value="annually">Annually</option>
-        </select>
+        </select> <br>
         Details: <input type="text" id="insertDetails" placeholder="Enter Details" maxlength="20">
 
         <button type="submit"> Insert Task</button> <br>
