--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -127,26 +127,20 @@
 
     <br>
     <hr><br> <!-- ========================================================================= -->
-
-    <h2>Reset User Table</h2>
-    <p>If you wish to reset the table press on the reset button. If this is the first time you're running this page, you
-        MUST use reset</p>
-    <button id="resetAppUsers"> Reset </button> <br>
-    <!-- A placeholder to display messages related to the reset operation. -->
-    <div id="resetResultMsg"></div>
-
-    <h2>Reset Task Table</h2>
-    <button id="resetTasks"> Reset </button> <br>
-    <!-- A placeholder to display messages related to the reset operation. -->
-    <div id="resetResultMsg"></div>
-
-    <h2>Populate Users</h2>
-    <button id="populateAppUsers"> Populate </button> <br>
-    <div id="populateResultMsg"></div>
-
-    <h2>Populate Tasks</h2>
-    <button id="populateTasks"> Populate </button> <br>
-    <div id="populateResultMsg"></div>
+    <section class = "reset-populate-section">
+        <h1>Reset and Populate</h1>
+        <!-- <h2>Reset User Table</h2> -->
+        <p>If you wish to reset the  (user) table press on the reset button. If this is the first time you're running this page, you
+            MUST use reset</p>
+            <div class="button-row">
+                <button id="resetAppUsers"> Reset User Table </button>
+                <button id="resetTasks"> Reset Task Table</button>
+                <button id="populateAppUsers"> Populate Users </button>
+                <button id="populateTasks"> Populate Tasks </button>
+            </div>
+        <div id="resetResultMsg"></div>
+        <div id="populateResultMsg"></div>
+    </section>
 
     <br>
     <hr><br> <!-- ========================================================================= -->
