--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -184,16 +184,19 @@
     </form>
     <div id="insertResultMsg"></div>
 
-    <h2> New Plant</h2>
+    <h2>New Plant</h2>
     <form id="insertPlantForm">
-        Plant ID: <input type="number" id="plantID" required>
-        Species: <input type="text" id="species" required>
-        Plant Name: <input type="text" id="plantName" required>
+        Plant ID: <input type="number" id="plantID" required><br>
+        Species: <input type="text" id="species" required><br>
+        Plant Name: <input type="text" id="plantName" required><br>
+        PlantLog ID: <input type="number" id="plantLogID" required><br>
+        Soil ID: <input type="number" id="soilID"><br>
+        Growth Stage: <input type="text" id="growth"><br>
+        Harvest Date: <input type="date" id="harvestDate"><br>
         <button type="submit">Insert</button>
     </form>
     <div id="insertPlantMsg"></div>
 
-    <br>
     <hr><br> <!-- ========================================================================= -->
     <h2> Delete User </h2>
     <form id="deleteUser">
