--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -206,6 +206,15 @@
     <div id="deleteResultMsg"></div>
     <br>
 
+    <h2>Delete Plant</h2>
+    <form id="deletePlantForm">
+        Plant ID: <input type="number" id="deletePlantID" required><br>
+        Species: <input type="text" id="deleteSpecies" required><br>
+        <button type="submit">Delete</button>
+    </form>
+    <div id="deletePlantMsg"></div>
+    <br>
+
     
     <hr><br> <!-- ========================================================================= -->
 
