--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -129,6 +129,7 @@
     <br><hr><br>
 
     <h1>Insertions</h1> 
+    <hr><br> <!-- ========================================================================= -->
 
     <h2> New User </h2>
     <form id="insertAppUser">
@@ -182,6 +183,8 @@
     </form>
     <div id="insertPlantMsg"></div>
 
+    <h1>Deletions</h1> 
+
     <hr><br> <!-- ========================================================================= -->
     <h2> Delete User </h2>
     <form id="deleteUser">
@@ -200,9 +203,8 @@
     <div id="deletePlantMsg"></div>
     <br>
 
-    
+    <h1>Updates</h1>     
     <hr><br> <!-- ========================================================================= -->
-
 
     <h2>Update Name in DemoTable</h2>
     <p>The values are case sensitive and if you enter in the wrong case, the update statement will not do anything.</p>
@@ -214,6 +216,20 @@
     </form>
     <!-- A placeholder to display messages related to the update operation. -->
     <div id="updateNameResultMsg"></div>
+
+    <h2>Update Plant Growth</h2>
+    <form id="updatePlantGrowthForm">
+        <label for="updatePlantID">Select Plant ID:</label>
+        <select id="updatePlantID" required>
+            <option value="">Choose a plant</option>
+        </select><br>
+
+        <label for="newGrowth">New Growth Stage:</label>
+        <input type="text" id="newGrowth" placeholder="e.g., Blooming" required><br>
+
+        <button type="submit">Update Growth</button>
+    </form>
+    <div id="updatePlantGrowthMsg"></div>
 
     <br>
     <hr><br> <!-- ========================================================================= -->
