Count Users Based on Frequency

--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -240,6 +240,14 @@
     <!-- A placeholder to display the count result. -->
     <div id="countResultMsg"></div> <br>
 
+    <h2> Number of Users based on Task Frequency </h2>
+    <button id="countAppUsersFrequency" type="button"> count </button> <br><br>
+    <table id="frequencyTable" border="1">
+    <thead> <tr><th>Frequency</th><th>User Count</th></tr> </thead>
+    <tbody></tbody>
+    </table>
+    <div id="countFrequencyMsg"></div>
+
     <!-- ===================================================================================== -->
     <!-- External JavaScript file that contains the functionality/logic for the operations above. -->
     <script src="scripts.js"></script>
