--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -31,7 +31,6 @@
     <table id="appUser" border="1">
         <thead>
             <tr>
-                <!--Table head, need to be adjusted accordingly to align with your own.-->
                 <th>UserID</th>
                 <th>First Name</th>
                 <th>Last Name</th>
@@ -56,6 +55,25 @@
     </table>
 
     <!--End of Plantlog display-->
+
+    <!-- Gardenlog Display -->
+    <h2>Garden Log</h2>
+    <button id="resetGardenLog">Reset Garden Log Table</button>
+    <p id="GardenLogResetMsg"></p>
+
+    <table id="gardenLogTable" border="1">
+    <thead>
+        <tr>
+        <th>GardenLogID</th>
+        <th>GardenID</th>
+        <th>Weather</th>
+        <th>Monthly Avg Temp</th>
+        <th>Controlled Temp</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+    </table>
+
 
     <h2>Find User</h2>
     <form id="searchUserForm">
@@ -119,7 +137,7 @@
             <div class="button-row">
                 <button id="resetAppUsers"> Reset User Table </button>
                 <button id="resetTasks"> Reset Task Table</button>
-                <button id="populateAppUsers"> Populate Users </button>
+                <!-- <button id="populateAppUsers"> Populate Users </button> -->
                 <button id="populateTasks"> Populate Tasks </button>
             </div>
         <div id="resetResultMsg"></div>
