--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -266,6 +266,24 @@
     </table>
     <div id="countFrequencyMsg"></div>
 
+    <h2>Average # of Tasks per User</h2>
+    <form id="avgTasksForm">
+        <label for="minTasks">Only include users with more than X tasks:</label>
+        <input type="number" id="minTasks" placeholder="Enter X" required>
+        <button type="submit">Calculate</button>
+    </form>
+    <div id="avgTasksResultMsg"></div>
+    <table id="avgTasksUserTable" border="1" style="display:none;">
+        <thead>
+            <tr>
+                <th>User ID</th>
+                <th>Task Count</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+    
+
     <!-- ===================================================================================== -->
     <!-- External JavaScript file that contains the functionality/logic for the operations above. -->
     <script src="scripts.js"></script>
