Html for update plant soil

--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -315,6 +315,22 @@
     </form>
     <div id="updatePlantGrowthMsg"></div>
 
+    <h2>Update Plant Soil</h2>
+    <form id="updatePlantSoilForm">
+        <label for="updateSoilPlantID">Select Plant ID:</label>
+        <select id="updateSoilPlantID" required>
+            <option value="">Choose a plant</option>
+        </select><br>
+    
+        <label for="updatedSoilID">New Soil ID:</label>
+        <select id="updatedSoilID" required>
+            <option value="">Select a soil ID</option>
+        </select><br>
+    
+        <button type="submit">Update Soil</button>
+    </form>
+    <div id="updatePlantSoilMsg"></div>
+
     <br>
     <hr><br> <!-- ========================================================================= -->
 
