--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -27,7 +27,14 @@
     <br>
     <hr><br> <!-- ========================================================================= -->
 
-    <h2>Show Users</h2>
+    <div class = "user-count">
+        <h2 style="margin: 0;">Show Users</h2>
+        <div class = "user-count-button">
+            <button id="countAppUsers" type="button">Count Users</button>
+            <span id="countResultMsg"></span>
+        </div>
+    </div>
+    <br>
     <table id="appUser" border="1">
         <thead>
             <tr>
@@ -358,12 +365,6 @@
 
     <br>
     <hr><br> <!-- ========================================================================= -->
-
-    <h2>Count Number of Users</h2>
-    <!-- <button id="countDemotable"> count </button> <br><br> -->
-    <button id="countAppUsers"> count </button> <br><br>
-    <!-- A placeholder to display the count result. -->
-    <div id="countResultMsg"></div> <br>
 
     <h1> DEMO Group By </h1>
     <h2> Number of Users based on Task Frequency </h2>
