--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -148,7 +148,7 @@
             <option value="mature">Mature</option>
         </select>
 
-        <input type="text" id="searchFamilyID" name="familyID" placeholder="Family ID">
+        <input type="text" id="searchFamilyID" name="familyID" placeholder="e.g. Budding">
 
         <label for="harvestable">Harvestable:</label>
         <select id="searchHarvestable" name="harvestable">
@@ -160,9 +160,10 @@
         <label for="prefEnvironment">Preferred Environment:</label>
         <select id="prefEnvironment" name="prefEnvironment">
             <option value="">-- Any --</option>
-            <option value="sunny">Sunny</option>
+            <option value="mild">Mild</option>
+            <option value="cool">Cool</option>
+            <option value="warm">Warm</option>
             <option value="shady">Shady</option>
-            <option value="humid">Humid</option>
             <option value="dry">Dry</option>
         </select>
 
