--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -82,6 +82,9 @@
             <option value="">Select a soil ID</option>
         </select><br>
 
+        <label for="updatedHarvestDate">New Harvest Date:</label>
+        <input type="date" id="updatedHarvestDate" placeholder="yyyy-mm-dd"><br>
+
         <button type="submit">Update Plant</button>
     </form>
 
