--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -288,7 +288,7 @@
             <option value="">Select a soil ID</option>
         </select><br>
     
-        Growth Stage: <input type="text" id="growth"><br>
+        Growth Stage: <input type="text" id="insertGrowth"><br>
         Harvest Date: <input type="date" id="harvestDate"><br>
     
         <button type="submit">Insert</button>
