--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -35,6 +35,7 @@
         </div>
     </div>
     <br>
+    <div class="scrollable-table">
     <table id="appUser" border="1">
         <thead>
             <tr>
@@ -45,10 +46,12 @@
         </thead>
         <tbody></tbody>
     </table>
+    </div>
 
      <!--Plantlog Display-->
 
     <h2>Plant Log</h2>
+    <div class="scrollable-table">
     <table id="plantLogTable" border="1">
     <thead>
         <tr>
@@ -63,6 +66,7 @@
     </thead>
     <tbody></tbody>
     </table>
+    </div>
 
     <!--End of Plantlog display-->
     
@@ -91,9 +95,7 @@
 
     <!-- Gardenlog Display -->
     <h2>Garden Log</h2>
-    <button id="resetGardenLog">Reset Garden Log Table</button>
-    <p id="GardenLogResetMsg"></p>
-
+    <div class="scrollable-table">
     <table id="gardenLogTable" border="1">
     <thead>
         <tr>
@@ -106,6 +108,8 @@
     </thead>
     <tbody></tbody>
     </table>
+    </div>
+
 
     <h1> DEMO JOIN </h1>
     <h2>Find User</h2>
@@ -210,6 +214,7 @@
         </table>
 
         <h2>Show Plants</h2>
+        <div class="scrollable-table">
         <table id="plantTable" border="1">
             <thead>
                 <tr>
@@ -220,6 +225,7 @@
             </thead>
             <tbody></tbody>
         </table>
+        </div>
 
     <br>
     <hr><br> <!-- ========================================================================= -->
