--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -9,7 +9,7 @@
     <!-- Link to the external CSS stylesheet. Uncomment if you wish to customize or add styling. -->
     <link rel="stylesheet" href="styles.css">  
 
-    <title>Database Application</title>
+    <title>BloomBase 🌱</title>
 </head>
 
 <body>
@@ -17,6 +17,8 @@
     <!-- Display the current status of the database connection. 
          !!HERE TO HELP U DEBUGGING, NOT REQUIRED IN YOUR OWN PROJECT!!
          -->
+    <h1><span>🌱</span>BloomBase - Garden/Plant Management<span>🌱</span></h1>
+
     <th>Database Connection Status:
         <!-- An in-line placeholder to display connection status. -->
         <span id="dbStatus"> </span>
@@ -115,7 +117,7 @@
     <h2>Find User</h2>
     <form id="searchUserForm">
         <label for="searchUserId">User ID:</label>
-        <input type="number" id="searchUserId" name="userID">
+        <input type="number" id="searchUserId" name="userID" placeholder="e.g. 1">
         <label for="searchFirstName">First Name:</label>
         <input type="text" id="searchFirstName" name="firstName">
         <label for="searchLastName">Last Name:</label>
