--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -176,6 +176,7 @@
 
     <p id="searchPlantResultMsg"></p>
 
+    <div class="scrollable-table">
     <table id="searchPlantResultsTable">
         <thead>
             <tr>
@@ -196,6 +197,7 @@
         </thead>
         <tbody></tbody>
     </table>
+    </div>
 
         <h2> Show User's Task(s) </h2>
         <form id="showUserTasksForm">
